--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="script.js" defer></script>
     <link rel="manifest" href="./manifest.json" />
   </head>
-  <body>
+  <body class="dark-mode">
     <div class="nav-wrapper">
       <nav class="nav">
         <h1 class="nav-title">Podcast Player</h1>
