Removing dummy data

--- a/public/index.html
+++ b/public/index.html
@@ -47,122 +47,7 @@
           <i class="fas fa-microphone-alt"></i>
         </div>
 
-        <div id="cardsContainer" class="cards-container">
-          <div hidden class="card">
-            <div class="card-img-container">
-              <img src="Podcast_01_generated.jpg" />
-            </div>
-            <div class="card-content">
-              <h3 class="podcast-title">Podcast Title</h3>
-              <p class="card-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non,
-                dolor temporibus neque quis itaque numquam pariatur odit facere,
-                mollitia omnis voluptas hic accusantium distinctio quas ipsa
-                consectetur ratione nemo ipsum vel aperiam beatae. Cumque at ut
-                quibusdam dignissimos reiciendis corrupti enim maiores, tempore
-                perspiciatis molestiae aut cum similique velit quidem.
-              </p>
-              <p class="episode-count">Episode: 50</p>
-              <p class="pub-date">Newest Episode: 2024-09-01</p>
-            </div>
-          </div>
-          <div hidden class="card">
-            <div class="card-img-container">
-              <img src="Podcast_01_generated.jpg" />
-            </div>
-            <div class="card-content">
-              <h3 class="podcast-title">Podcast Title</h3>
-              <p class="card-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non,
-                dolor temporibus neque quis itaque numquam pariatur odit facere,
-                mollitia omnis voluptas hic accusantium distinctio quas ipsa
-                consectetur ratione nemo ipsum vel aperiam beatae. Cumque at ut
-                quibusdam dignissimos reiciendis corrupti enim maiores, tempore
-                perspiciatis molestiae aut cum similique velit quidem.
-              </p>
-              <p class="episode-count">Episode: 50</p>
-              <p class="pub-date">Newest Episode: 2024-09-01</p>
-            </div>
-          </div>
-          <div hidden class="card">
-            <div class="card-img-container">
-              <img src="Podcast_01_generated.jpg" />
-            </div>
-            <div class="card-content">
-              <h3 class="podcast-title">Podcast Title</h3>
-              <p class="card-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non,
-                dolor temporibus neque quis itaque numquam pariatur odit facere,
-                mollitia omnis voluptas hic accusantium distinctio quas ipsa
-                consectetur ratione nemo ipsum vel aperiam beatae. Cumque at ut
-                quibusdam dignissimos reiciendis corrupti enim maiores, tempore
-                perspiciatis molestiae aut cum similique velit quidem.
-              </p>
-              <p class="episode-count">Episode: 50</p>
-              <p class="pub-date">Newest Episode: 2024-09-01</p>
-            </div>
-          </div>
-          <div hidden class="card">
-            <div class="card-img-container">
-              <img src="Podcast_01_generated.jpg" />
-            </div>
-            <div class="card-content">
-              <h3 class="podcast-title">Podcast Title</h3>
-              <p class="card-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non,
-                dolor temporibus neque quis itaque numquam pariatur odit facere,
-                mollitia omnis voluptas hic accusantium distinctio quas ipsa
-                consectetur ratione nemo ipsum vel aperiam beatae. Cumque at ut
-                quibusdam dignissimos reiciendis corrupti enim maiores, tempore
-                perspiciatis molestiae aut cum similique velit quidem.
-              </p>
-              <p class="episode-count">Episode: 50</p>
-              <p class="pub-date">Newest Episode: 2024-09-01</p>
-            </div>
-          </div>
-          <div hidden class="card">
-            <div class="card-img-container">
-              <img src="Podcast_01_generated.jpg" />
-            </div>
-            <div class="card-content">
-              <h3 class="podcast-title">Podcast Title</h3>
-              <p class="card-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non,
-                dolor temporibus neque quis itaque numquam pariatur odit facere,
-                mollitia omnis voluptas hic accusantium distinctio quas ipsa
-                consectetur ratione nemo ipsum vel aperiam beatae. Cumque at ut
-                quibusdam dignissimos reiciendis corrupti enim maiores, tempore
-                perspiciatis molestiae aut cum similique velit quidem.
-              </p>
-              <p class="episode-count">Episode: 50</p>
-              <p class="pub-date">Newest Episode: 2024-09-01</p>
-            </div>
-          </div>
-          <div hidden class="card">
-            <div class="card-img-container">
-              <img src="Podcast_01_generated.jpg" />
-            </div>
-            <div class="card-content">
-              <h3 class="podcast-title">Podcast Title</h3>
-              <p class="card-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non,
-                dolor temporibus neque quis itaque numquam pariatur odit facere,
-                mollitia omnis voluptas hic accusantium distinctio quas ipsa
-                consectetur ratione nemo ipsum vel aperiam beatae. Cumque at ut
-                quibusdam dignissimos reiciendis corrupti enim maiores, tempore
-                perspiciatis molestiae aut cum similique velit quidem.
-              </p>
-              <p class="episode-count">Episode: 50</p>
-              <p class="pub-date">Newest Episode: 2024-09-01</p>
-            </div>
-          </div>
-
-          <div hidden class="pagination">
-            <i id="prev-btn" class="fas fa-chevron-left"></i>
-            <span id="currentPage">1</span>
-            <i id="next-btn" class="fas fa-chevron-right"></i>
-          </div>
-        </div>
+        <div id="cardsContainer" class="cards-container"></div>
       </div>
 
       <div class="player-container">
