Removing dummy data

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,9 @@
           <i class="fas fa-microphone-alt"></i>
         </div>
 
-        <div id="cardsContainer" class="cards-container"></div>
+        <div id="cardsContainer" class="cards-container">
+          <h1>Search for any podcast</h1>
+        </div>
       </div>
 
       <div class="player-container">
