Removing dummy data

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,13 @@
         </div>
 
         <div id="cardsContainer" class="cards-container">
-          <h1>Search for any podcast</h1>
+          <h2>Search any podacat</h2>
+
+          <div hidden class="pagination">
+            <i id="prev-btn" class="fas fa-chevron-left"></i>
+            <span id="currentPage">1</span>
+            <i id="next-btn" class="fas fa-chevron-right"></i>
+          </div>
         </div>
       </div>
 
