--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <div id="cardsContainer" class="cards-container">
           <h2>Search any podacat</h2>
 
-          <div hidden class="pagination">
+          <div style="display: none" class="pagination">
             <i id="prev-btn" class="fas fa-chevron-left"></i>
             <span id="currentPage">1</span>
             <i id="next-btn" class="fas fa-chevron-right"></i>
